--- a/style.css
+++ b/style.css
@@ -55,3 +55,14 @@ a{
     text-decoration: none;
     color:white;
 }
+
+footer {
+    background-color: #42466C;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 30px 30px 20px 45px;
+    margin:30px;
+    color:white;
+}
